Adding og:image

--- a/index.html
+++ b/index.html
@@ -13,6 +13,18 @@
     <meta property="og:site_name" content="DartsVision.com">
     <meta property="og:description"
         content="DartsVision.com offers a professional-grade automatic scoring system for steel-tip dartboards, powered by AutoDarts. Upgrade your game with computer vision accuracy.">
+    <meta property="og:url" content="https://dartsvision.com">
+    <meta property="og:type" content="website">
+    <meta property="og:image" content="https://dartsvision.com/images/PXL_20260116_013922171.jpg">
+    <meta property="og:image:width" content="1200">
+    <meta property="og:image:height" content="630">
+
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="DartsVision.com - Smart Darts Kit Powered by AutoDarts">
+    <meta name="twitter:description" content="DartsVision.com offers a professional-grade automatic scoring system for steel-tip dartboards, powered by AutoDarts. Upgrade your game with computer vision accuracy.">
+    <meta name="twitter:image" content="https://dartsvision.com/images/PXL_20260116_013922171.jpg">
+
     <style>
         /* --- CSS Styles --- */
         :root {
