--- a/index.html
+++ b/index.html
@@ -378,7 +378,7 @@
                 <h3>Professional Grade Automatic Scoring System.</h3>
                 <p>Upgrade your existing steel-tip board with broadcast-quality automatic scoring, powered by AutoDarts.
                     No more chalkboard math, just pure gameplay.</p>
-                <button id="orderBtn" class="btn">Order Your Kit - $350</button>
+                <button id="orderBtn" class="btn">Order Your Kit</button>
             </div>
             <div class="hero-image">
                 <img src="images/PXL_20260116_013922171.jpg" alt="AutoDarts Smartboard Setup with Monitor">
@@ -439,16 +439,24 @@
     <section id="whats-included">
         <div class="container">
             <div class="included-text">
-                <h2>The <span class="neon-text">$350</span> Complete Kit.</h2>
-                <p>We build and configure the tech so you don't have to. Here is exactly what is included in your
-                    professional setup:</p>
+                <h2>The <span class="neon-text">Basic Kit - $350</span>.</h2>
+                <p>We build and configure the tech so you don't have to. Here is exactly what is included in our Basic Kit setup. Check out our new Premium Kit below!</p>
                 <ul class="checklist">
-                    <li><strong>360° LED Light Ring:</strong> Shadowless illumination for perfect camera vision.</li>
+                    <li><strong>3D Printed Light Ring:</strong> Shadowless illumination for perfect camera vision.</li>
                     <li><strong>3x High-Speed Cameras:</strong> Pre-installed in custom 3D-printed mounts.</li>
                     <li><strong>Pre-Configured Mini-PC:</strong> Dedicated unit that boots directly into AutoDarts.</li>
-                    <li><strong>Power Supplies & Cables:</strong> All necessary cabling for a clean setup.</li>
                 </ul>
-                <p class="disclaimer">Note: Does not include dartboard, wall surround, or monitor/TV.</p>
+                <h2>The <span class="neon-text">Premium Kit - $750</span>.</h2>
+                <p>For the ultimate AutoDarts experience, our Premium Kit includes:</p>
+                <ul class="checklist">
+                    <li><strong>Target Corona Vision Light Ring:</strong> Professional-grade, shadowless illumination.</li>
+                    <li><strong>Winmau Blade 6 Dartboard:</strong> The official dartboard of the PDC.</li>
+                    <li><strong>3D Printed Camera Arms:</strong> Custom mounts for optimal camera positioning.</li>
+                    <li><strong>3x High-Speed Cameras:</strong> For broadcast-quality scoring accuracy.</li>
+                    <li><strong>Wireless Keyboard with Touchpad:</strong> Seamless navigation and control.</li>
+                    <li><strong>24" Smart TV:</strong> Integrated display for an immersive setup.</li>
+                </ul>
+                <p class="disclaimer">Note: Power supplies and cables for all components are included in both kits. Dartboard, wall surround, or monitor/TV are NOT included in the Basic Kit.</p>
             </div>
         </div>
     </section>
@@ -456,8 +464,8 @@
     <footer id="contact">
         <div class="container">
             <h2>Ready to Upgrade Your Game?</h2>
-            <div class="price">$350 Complete System</div>
-            <p style="color: var(--neon-green);">Optional Professional Installation: +$50</p>
+            <div class="price">Kits Starting From $350</div>
+            <p style="color: var(--neon-green);">Optional Professional Installation: +$50 (available for both kits)</p>
 
             <div class="contact-info">
                 <div class="contact-card">
