--- a/index.html
+++ b/index.html
@@ -439,24 +439,26 @@
     <section id="whats-included">
         <div class="container">
             <div class="included-text">
-                <h2>The <span class="neon-text">Basic Kit - $350</span>.</h2>
+                <h2>The <span class="neon-text">Basic Kit - $400</span>.</h2>
                 <p>We build and configure the tech so you don't have to. Here is exactly what is included in our Basic Kit setup. Check out our new Premium Kit below!</p>
                 <ul class="checklist">
                     <li><strong>3D Printed Light Ring:</strong> Shadowless illumination for perfect camera vision.</li>
                     <li><strong>3x High-Speed Cameras:</strong> Pre-installed in custom 3D-printed mounts.</li>
                     <li><strong>Pre-Configured Mini-PC:</strong> Dedicated unit that boots directly into AutoDarts.</li>
+                    <li><strong>Dartboard Surround:</strong> Protects your wall and catches stray darts.</li>
                 </ul>
                 <h2>The <span class="neon-text">Premium Kit - $750</span>.</h2>
                 <p>For the ultimate AutoDarts experience, our Premium Kit includes:</p>
                 <ul class="checklist">
                     <li><strong>Target Corona Vision Light Ring:</strong> Professional-grade, shadowless illumination.</li>
                     <li><strong>Winmau Blade 6 Dartboard:</strong> The official dartboard of the PDC.</li>
+                    <li><strong>Dartboard Surround:</strong> Protects your wall and catches stray darts.</li>
                     <li><strong>3D Printed Camera Arms:</strong> Custom mounts for optimal camera positioning.</li>
                     <li><strong>3x High-Speed Cameras:</strong> For broadcast-quality scoring accuracy.</li>
                     <li><strong>Wireless Keyboard with Touchpad:</strong> Seamless navigation and control.</li>
                     <li><strong>24" Smart TV:</strong> Integrated display for an immersive setup.</li>
                 </ul>
-                <p class="disclaimer">Note: Power supplies and cables for all components are included in both kits. Dartboard, wall surround, or monitor/TV are NOT included in the Basic Kit.</p>
+
             </div>
         </div>
     </section>
@@ -464,7 +466,7 @@
     <footer id="contact">
         <div class="container">
             <h2>Ready to Upgrade Your Game?</h2>
-            <div class="price">Kits Starting From $350</div>
+            <div class="price">Kits Starting From $400</div>
             <p style="color: var(--neon-green);">Optional Professional Installation: +$50 (available for both kits)</p>
 
             <div class="contact-info">
