feat: add mini pc to premium kit

--- a/index.html
+++ b/index.html
@@ -457,6 +457,7 @@
                     <li><strong>3x High-Speed Cameras:</strong> For broadcast-quality scoring accuracy.</li>
                     <li><strong>Wireless Keyboard with Touchpad:</strong> Seamless navigation and control.</li>
                     <li><strong>24" Smart TV:</strong> Integrated display for an immersive setup.</li>
+                    <li><strong>Mini PC with AutoDarts Pre-installed:</strong> A dedicated, powerful mini-computer that boots directly into the AutoDarts software, fully configured and ready for immediate use.</li>
                 </ul>
 
             </div>
