feat: replace mini pc with raspberry pi 5 in basic kit

--- a/index.html
+++ b/index.html
@@ -444,7 +444,7 @@
                 <ul class="checklist">
                     <li><strong>3D Printed Light Ring:</strong> Shadowless illumination for perfect camera vision.</li>
                     <li><strong>3x High-Speed Cameras:</strong> Pre-installed in custom 3D-printed mounts.</li>
-                    <li><strong>Pre-Configured Mini-PC:</strong> Dedicated unit that boots directly into AutoDarts.</li>
+                    <li><strong>Raspberry Pi 5:</strong> A powerful single-board computer pre-configured with the AutoDarts OS, ready to be plugged in and used immediately.</li>
                     <li><strong>Dartboard Surround:</strong> Protects your wall and catches stray darts.</li>
                 </ul>
                 <h2>The <span class="neon-text">Premium Kit - $750</span>.</h2>
