feat: update plug & play system description

--- a/index.html
+++ b/index.html
@@ -411,8 +411,7 @@
                 <div class="feature-card">
                     <div class="feature-icon">🔌</div>
                     <h3>Plug & Play System</h3>
-                    <p>The included mini-PC comes pre-configured with AutoDarts OS. Just mount the light ring, plug it
-                        into your monitor or TV, and you're ready to play.</p>
+                    <p>The included Raspberry Pi 5 or Mini PC comes pre-configured with AutoDarts OS. Just mount the light ring, plug it into your monitor or TV, and you're ready to play.</p>
                 </div>
             </div>
         </div>
