feat: add order buttons to kits

--- a/index.html
+++ b/index.html
@@ -446,6 +446,7 @@
                     <li><strong>Raspberry Pi 5:</strong> A powerful single-board computer pre-configured with the AutoDarts OS, ready to be plugged in and used immediately.</li>
                     <li><strong>Dartboard Surround:</strong> Protects your wall and catches stray darts.</li>
                 </ul>
+                <a href="mailto:dburns@hotmail.com?subject=AutoDarts%20Basic%20Kit%20Inquiry" class="btn">Order Basic Kit</a>
                 <h2>The <span class="neon-text">Premium Kit - $750</span>.</h2>
                 <p>For the ultimate AutoDarts experience, our Premium Kit includes:</p>
                 <ul class="checklist">
@@ -458,6 +459,7 @@
                     <li><strong>24" Smart TV:</strong> Integrated display for an immersive setup.</li>
                     <li><strong>Mini PC with AutoDarts Pre-installed:</strong> A dedicated, powerful mini-computer that boots directly into the AutoDarts software, fully configured and ready for immediate use.</li>
                 </ul>
+                <a href="mailto:dburns@hotmail.com?subject=AutoDarts%20Premium%20Kit%20Inquiry" class="btn">Order Premium Kit</a>
 
             </div>
         </div>
