refactor: improve kits section layout

--- a/index.html
+++ b/index.html
@@ -447,6 +447,8 @@
                     <li><strong>Dartboard Surround:</strong> Protects your wall and catches stray darts.</li>
                 </ul>
                 <a href="mailto:dburns@hotmail.com?subject=AutoDarts%20Basic%20Kit%20Inquiry" class="btn">Order Basic Kit</a>
+            </div>
+            <div class="included-text">
                 <h2>The <span class="neon-text">Premium Kit - $750</span>.</h2>
                 <p>For the ultimate AutoDarts experience, our Premium Kit includes:</p>
                 <ul class="checklist">
@@ -460,7 +462,6 @@
                     <li><strong>Mini PC with AutoDarts Pre-installed:</strong> A dedicated, powerful mini-computer that boots directly into the AutoDarts software, fully configured and ready for immediate use.</li>
                 </ul>
                 <a href="mailto:dburns@hotmail.com?subject=AutoDarts%20Premium%20Kit%20Inquiry" class="btn">Order Premium Kit</a>
-
             </div>
         </div>
     </section>
