refactor: improve kits section layout

--- a/index.html
+++ b/index.html
@@ -208,6 +208,11 @@
             margin: 0 auto;
         }
 
+        .kits-container {
+            display: flex;
+            gap: 2rem;
+        }
+
         .checklist {
             list-style-type: none;
             padding: 0;
@@ -437,6 +442,7 @@
 
     <section id="whats-included">
         <div class="container">
+            <div class="kits-container">
             <div class="included-text">
                 <h2>The <span class="neon-text">Basic Kit - $400</span>.</h2>
                 <p>We build and configure the tech so you don't have to. Here is exactly what is included in our Basic Kit setup. Check out our new Premium Kit below!</p>
@@ -462,6 +468,7 @@
                     <li><strong>Mini PC with AutoDarts Pre-installed:</strong> A dedicated, powerful mini-computer that boots directly into the AutoDarts software, fully configured and ready for immediate use.</li>
                 </ul>
                 <a href="mailto:dburns@hotmail.com?subject=AutoDarts%20Premium%20Kit%20Inquiry" class="btn">Order Premium Kit</a>
+            </div>
             </div>
         </div>
     </section>
