--- a/index.html
+++ b/index.html
@@ -369,6 +369,10 @@
                 flex-direction: column;
                 gap: 1rem;
             }
+
+            .kits-container {
+                flex-direction: column;
+            }
         }
     </style>
     <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🎯</text></svg>">
