feat: add title to whats-included section

--- a/index.html
+++ b/index.html
@@ -446,6 +446,7 @@
 
     <section id="whats-included">
         <div class="container">
+            <h2 style="text-align: center;">Choose Your Kit</h2>
             <div class="kits-container">
             <div class="included-text">
                 <h2>The <span class="neon-text">Basic Kit - $400</span>.</h2>
