--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
     <!-- Twitter Card -->
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="DartsVision.com - Smart Darts Kit Powered by AutoDarts">
-    <meta name="twitter:description" content="DartsVision.com offers a professional-grade automatic scoring system for steel-tip dartboards, powered by AutoDarts. Upgrade your game with computer vision accuracy.">
+    <meta name="twitter:description"
+        content="DartsVision.com offers a professional-grade automatic scoring system for steel-tip dartboards, powered by AutoDarts. Upgrade your game with computer vision accuracy.">
     <meta name="twitter:image" content="https://dartsvision.com/images/PXL_20260116_013922171.jpg">
 
     <style>
@@ -379,7 +380,8 @@
             }
         }
     </style>
-    <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🎯</text></svg>">
+    <link rel="icon"
+        href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🎯</text></svg>">
 </head>
 
 <body>
@@ -424,7 +426,8 @@
                 <div class="feature-card">
                     <div class="feature-icon">🔌</div>
                     <h3>Plug & Play System</h3>
-                    <p>The included Raspberry Pi 5 or Mini PC comes pre-configured with AutoDarts OS. Just mount the light ring, plug it into your monitor or TV, and you're ready to play.</p>
+                    <p>The included Raspberry Pi 5 or Mini PC comes pre-configured with AutoDarts OS. Just mount the
+                        light ring, plug it into your monitor or TV, and you're ready to play.</p>
                 </div>
             </div>
         </div>
@@ -452,32 +455,40 @@
         <div class="container">
             <h2 style="text-align: center;">Choose Your Kit</h2>
             <div class="kits-container">
-            <div class="included-text">
-                <h2>The <span class="neon-text">Basic Kit - $400</span>.</h2>
-                <p>We build and configure the tech so you don't have to. Here is exactly what is included in our Basic Kit setup. Check out our new Premium Kit below!</p>
-                <ul class="checklist">
-                    <li><strong>3D Printed Light Ring:</strong> Shadowless illumination for perfect camera vision.</li>
-                    <li><strong>3x High-Speed Cameras:</strong> Pre-installed in custom 3D-printed mounts.</li>
-                    <li><strong>Raspberry Pi 5:</strong> A powerful single-board computer pre-configured with the AutoDarts OS, ready to be plugged in and used immediately.</li>
-                    <li><strong>Dartboard Surround:</strong> Protects your wall and catches stray darts.</li>
-                </ul>
-                <a href="mailto:dburns@hotmail.com?subject=AutoDarts%20Basic%20Kit%20Inquiry" class="btn">Order Basic Kit</a>
-            </div>
-            <div class="included-text">
-                <h2>The <span class="neon-text">Premium Kit - $750</span>.</h2>
-                <p>For the ultimate AutoDarts experience, our Premium Kit includes:</p>
-                <ul class="checklist">
-                    <li><strong>Target Corona Vision Light Ring:</strong> Professional-grade, shadowless illumination.</li>
-                    <li><strong>Winmau Blade 6 Dartboard:</strong> The official dartboard of the PDC.</li>
-                    <li><strong>Dartboard Surround:</strong> Protects your wall and catches stray darts.</li>
-                    <li><strong>3D Printed Camera Arms:</strong> Custom mounts for optimal camera positioning.</li>
-                    <li><strong>3x High-Speed Cameras:</strong> For broadcast-quality scoring accuracy.</li>
-                    <li><strong>Wireless Keyboard with Touchpad:</strong> Seamless navigation and control.</li>
-                    <li><strong>24" Smart TV:</strong> Integrated display for an immersive setup.</li>
-                    <li><strong>Mini PC with AutoDarts Pre-installed:</strong> A dedicated, powerful mini-computer that boots directly into the AutoDarts software, fully configured and ready for immediate use.</li>
-                </ul>
-                <a href="mailto:dburns@hotmail.com?subject=AutoDarts%20Premium%20Kit%20Inquiry" class="btn">Order Premium Kit</a>
-            </div>
+                <div class="included-text">
+                    <h2>The <span class="neon-text">Basic Kit - $400</span>.</h2>
+                    <p>We build and configure the tech so you don't have to. Here is exactly what is included in our
+                        Basic Kit setup.</p>
+                    <ul class="checklist">
+                        <li><strong>3D Printed Light Ring:</strong> Shadowless illumination for perfect camera vision.
+                        </li>
+                        <li><strong>3x High-Speed Cameras:</strong> Pre-installed in custom 3D-printed mounts.</li>
+                        <li><strong>Mini PC with AutoDarts Pre-installed:</strong> A computer pre-configured with the
+                            AutoDarts software, ready to be plugged in and used immediately.</li>
+                        <li><strong>Dartboard Surround:</strong> Protects your wall and catches stray darts.</li>
+                    </ul>
+                    <a href="mailto:dburns@hotmail.com?subject=AutoDarts%20Basic%20Kit%20Inquiry" class="btn">Order
+                        Basic Kit</a>
+                </div>
+                <div class="included-text">
+                    <h2>The <span class="neon-text">Premium Kit - $750</span>.</h2>
+                    <p>For the ultimate AutoDarts experience, our Premium Kit includes:</p>
+                    <ul class="checklist">
+                        <li><strong>Target Corona Vision Light Ring:</strong> Professional-grade, shadowless
+                            illumination.</li>
+                        <li><strong>Winmau Blade 6 Dartboard:</strong> The official dartboard of the PDC.</li>
+                        <li><strong>Dartboard Surround:</strong> Protects your wall and catches stray darts.</li>
+                        <li><strong>3D Printed Camera Arms:</strong> Custom mounts for optimal camera positioning.</li>
+                        <li><strong>3x High-Speed Cameras:</strong> For broadcast-quality scoring accuracy.</li>
+                        <li><strong>Wireless Keyboard with Touchpad:</strong> Seamless navigation and control.</li>
+                        <li><strong>24" Smart TV:</strong> Integrated display for an immersive setup.</li>
+                        <li><strong>Mini PC with AutoDarts Pre-installed:</strong> A dedicated, powerful mini-computer
+                            that boots directly into the AutoDarts software, fully configured and ready for immediate
+                            use.</li>
+                    </ul>
+                    <a href="mailto:dburns@hotmail.com?subject=AutoDarts%20Premium%20Kit%20Inquiry" class="btn">Order
+                        Premium Kit</a>
+                </div>
             </div>
         </div>
     </section>
